--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="rgb(23, 23, 23)">
 
     <link rel="shortcut icon" href="assets/img/nicode.ico" type="image/x-icon">
-    <title>Samuel Nicolau | Desenvolvedor Front End</title>
+    <title>Samuca Creations | Digital Artist</title>
 
     <!--CSS LINKS-->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -35,27 +35,21 @@
                 </ol>
                 <ul class="nav-list-social">
                     <li>
-                        <a href="https://www.linkedin.com/in/samuel-nicolau-muambala-b3b436200/" target="_blank">
-                            <i class="fab fa-linkedin-in"></i>
-                            <span><i class="fab fa-linkedin-in"></i></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/nicodedeveloper" target="_blank">
+                        <a href="https://www.facebook.com/@magosamuca" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                             <span><i class="fab fa-facebook-f"></i></span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/d.esloton/?hl=pt" target="_blank">
+                        <a href="https://www.instagram.com/samucacreations/" target="_blank">
                             <i class="fab fa-instagram"></i>
                             <span><i class="fab fa-instagram"></i></span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/nicodesn" target="_blank">
-                            <i class="fab fa-github"></i>
-                            <span><i class="fab fa-github"></i></span>
+                        <a href="https://www.behance.net/magosamuca" target="_blank">
+                            <i class="fab fa-behance"></i>
+                            <span><i class="fab fa-behance"></i></span>
                         </a>
                     </li>
                 </ul> 
@@ -68,13 +62,13 @@
                 <div class="container" data-aos="fade-up"
                 data-aos-duration="3000">
                     <p class="text-blur-out">Oi, meu nome é</p>
-                    <h2 class="big-heading">Samuel  Nicolau<span>.</span></h2>
+                    <h2 class="big-heading">Samuca  Creations<span>.</span></h2>
                     <p>
-                        Sou um engenheiro de software especializado <br> em dar vida às ideais na internet e projetando <br> melhores experiências digitais. Atualmente estou focado na construção de sites.
+                        Sou um Designer Gráfico especializado em dar vida às ideais virtuais consequentemente físicos e projetando melhores experiências aos clientes.
                     </p>
                     <br>
                     <div class="btn-animado">
-                        <a href="#">Resumo</a>
+                        <a href="https://www.instagram.com/samucacreations/" target="_blank">Instagram</a>
                     </div>
                 </div>
                 <!--Svg-->
@@ -84,14 +78,11 @@
                 </div>
                 <div class="container" data-aos="fade-up"
                 data-aos-duration="3000">
-                    <h2 class="sub-heading">Front-End Developer UX Designer<span>.</span></h2>
+                    <h2 class="sub-heading">Designer Gráfico<span>.</span></h2>
                     <div class="main-coluna">
                         <div class="coluna content-about">
                             <p>
-                                No mundo digital cada clique é fundamental para melhor interação do usuário, com isso procuro caprichar cada detalhe nos meus trabalhos.
-                            </p>
-                            <p>
-                                Quando não estou na frente de uma tela de computador, provavelmente estou na frente de uma tela de smartphone.
+                                No mundo digital o design e a combinação das cores são fundamentais para causar melhor sensação ao cliente, com isso procuro caprichar cada detalhe nos meus trabalhos.
                             </p>
                         </div>
                     </div>
@@ -100,34 +91,8 @@
         </section>
         <!--Serviços-->
         <section id="service-area">
-            <h1 class="main-title">Serviços <span>.</span></h1>
+            <h1 class="main-title">Artista Digital<span>.</span></h1>
             <div class="containerMax">
-                <div class="box-service" data-aos="fade-up"
-                data-aos-duration="3000">
-                    <div class="head-box">
-                        <lord-icon
-                            src="https://cdn.lordicon.com/anihkfxp.json"
-                            trigger="loop"
-                            colors="primary:#e4e4e4,secondary:#fabd21"
-                            style="width:75px;height:75px">
-                        </lord-icon>
-                        <h1 class="title-project">Desenvolvimento</h1>
-                    </div>
-                    <p>Desenvolvimento de sites profissionais, blogs, portfólios, landing pages e e-commerce.</p>
-                </div>
-                <div class="box-service" data-aos="fade-up"
-                data-aos-duration="3000">
-                    <div class="head-box">
-                        <lord-icon
-                            src="https://cdn.lordicon.com/jvucoldz.json"
-                            trigger="loop"
-                            colors="primary:#fabd21,secondary:#e4e4e4"
-                            style="width:75px;height:75px">
-                        </lord-icon>
-                        <h1 class="title-project">Animação</h1>
-                    </div>
-                    <P>Crio interações, projetando melhores experiências digitais, para seus clientes.</P>
-                </div>
                 <div class="box-service" data-aos="fade-up"
                 data-aos-duration="3000">
                     <div class="head-box">
@@ -137,11 +102,37 @@
                             colors="primary:#e4e4e4,secondary:#fabd21"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">Designer</h1>
+                        <h1 class="title-project">Identidade Visual</h1>
                     </div>
                     <p>
-                        Desenho interface de forma que ela seja clara, objetiva e principalmente intuitiva para o usuário.
+                        Criação de identidade visual de forma que ela seja clara, objetiva e principalmente intuitiva para o mercado.
                     </p>
+                </div>
+                <div class="box-service" data-aos="fade-up"
+                data-aos-duration="3000">
+                    <div class="head-box">
+                        <lord-icon
+                            src="https://cdn.lordicon.com/uqpazftn.json"
+                            trigger="loop"
+                            colors="primary:#ffffff,secondary:#fabd21"
+                            style="width:75px;height:75px">
+                        </lord-icon>
+                        <h1 class="title-project">Redes Sociais</h1>
+                    </div>
+                    <p>Uma gestão envolvente, planejado e com conteúdo estrategicamente personalizado para o seu público alvo.</p>
+                </div>
+                <div class="box-service" data-aos="fade-up"
+                data-aos-duration="3000">
+                    <div class="head-box">
+                        <lord-icon
+                            src="https://cdn.lordicon.com/vixtkkbk.json"
+                            trigger="loop"
+                            colors="primary:#fabd21,secondary:#e4e4e4"
+                            style="width:75px;height:75px">
+                        </lord-icon>
+                        <h1 class="title-project">Fotográfia</h1>
+                    </div>
+                    <P>A fotográfia é um gatilho nostálgico, eternize os melhores momentos da sua vida. Qualidade que sobra pra guardar no bolso.</P>
                 </div>
             </div>
         </section>
@@ -152,6 +143,7 @@
                 <span class="auto-type"></span>
             </div>
         </section>
+        
         <!--projetos-->
         <section id="works">
             <h1 class="main-title">Projetos<span>.</span></h1>
@@ -162,7 +154,23 @@
             </div>-->
             <div class="containerMax">
                 <div class="project-body" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="4000">
+                    <!--<div class="head-box">
+                        <lord-icon
+                            src="https://cdn.lordicon.com/xjovhxra.json"
+                            trigger="loop"
+                            colors="primary:#fabd21,secondary:#fabd21"
+                            style="width:75px;height:75px">
+                        </lord-icon>
+                        <p>
+                            Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
+                        </p>
+                    </div>-->
+                    <div class="project-image">
+                    </div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
+                data-aos-duration="4000">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
@@ -178,23 +186,7 @@
                     </div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
-                data-aos-duration="3000">
-                    <div class="head-box">
-                        <lord-icon
-                            src="https://cdn.lordicon.com/xjovhxra.json"
-                            trigger="loop"
-                            colors="primary:#fabd21,secondary:#fabd21"
-                            style="width:75px;height:75px">
-                        </lord-icon>
-                        <p>
-                            Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                        </p>
-                    </div>
-                    <div class="project-image">
-                    </div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="4000">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
@@ -209,7 +201,7 @@
                     <div class="project-image"></div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="4000">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
@@ -224,19 +216,16 @@
                     <div class="project-image"></div>
                 </div>
             </div>
-            <div class="btn-repositorio">
+            <!--<div class="btn-repositorio">
                 <div class="btn-animado unikB">
                     <a href="#">Repositório no Github</a>
                 </div>
-            </div>
+            </div>-->
         </section>
         <div class="myemail">
-            <a href="mailto:muambalas@gmail.com">muambalas@gmail.com</a>
+            <a href="mailto:samucacreations@gmail.com">samucacreations@gmail.com</a>
         </div>
         <footer>
-            <video autoplay muted loop plays-inline class="background-video">
-                <source class="video" src="vendor/background.mp4" type="video/mp4">
-            </video>
             <!--contato-->
             <div id="contact-area">
                 <div class="col-12">
@@ -249,7 +238,7 @@
                 </P>
                 <div class="btn-links-project arquivo">
                     <div class="btn-malito">
-                        <a href="mailto:muambalas@gmail.com">
+                        <a href="mailto:samucacreations@gmail.com">
                             Diga Olá!
                         </a>
                     </div>
@@ -257,34 +246,28 @@
             </div>
             <ul class="nav-list-social">
                 <li>
-                    <a href="https://www.linkedin.com/in/samuel-nicolau-muambala-b3b436200/" target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
-                        <span><i class="fab fa-linkedin-in"></i></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/daimon.esloton/" target="_blank">
+                    <a href="https://www.facebook.com/@magosamuca" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                         <span><i class="fab fa-facebook-f"></i></span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/d.esloton/?hl=pt" target="_blank">
+                    <a href="https://www.instagram.com/samucacreations/" target="_blank">
                         <i class="fab fa-instagram"></i>
                         <span><i class="fab fa-instagram"></i></span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/DaimonEsloton" target="_blank">
-                        <i class="fab fa-github"></i>
-                        <span><i class="fab fa-github"></i></span>
+                    <a href="https://www.behance.net/magosamuca" target="_blank">
+                        <i class="fab fa-behance"></i>
+                        <span><i class="fab fa-behance"></i></span>
                     </a>
                 </li>
             </ul> 
             <div class="rodape-layout">
-                <p>© 2022 nicodesn.com</p>
+                <p>© 2023 samucacreations.com</p>
                 <div>
-                    <p>Powered by nicodesn</p>
+                    <p>Powered by Samuca</p>
                 </div>
             </div>
         </footer>
