--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
                 <div class="project-body" data-aos="fade-up"
                 data-aos-duration="4000">
-                    <div class="head-box">
+                    <!--<div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
                             trigger="loop"
@@ -181,7 +181,7 @@
                         <p>
                             Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
                         </p>
-                    </div>
+                    </div>-->
                     <div class="project-image">
                     </div>
                 </div>
