--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="rgb(23, 23, 23)">
 
-    <link rel="shortcut icon" href="assets/img/nicode.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon-32x32.png" type="image/x-icon">
     <title>Samuca Creations | Digital Artist</title>
 
     <!--CSS LINKS-->
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="assets/img/logo.jpg" alt="logo-name"></a>
+        <a href="index.html"><img class="logo" src="assets/img/logo.png" alt="logo-name"></a>
         <div aria-controls="menu-toggle" aria-expanded="false" class="btn-mobile">
             <span class="line" aria-expanded="false"></span>
         </div>
@@ -74,7 +74,7 @@
                 <!--Svg-->
                 <div class="container" data-aos="fade-up"
                 data-aos-duration="3000">
-                    <img class="meAvatar" src="assets/img/heidy.png" alt="Samuel Nicolau">
+                    <img class="meAvatar" src="assets/img/samuca.png" alt="Samuel Nicolau">
                 </div>
                 <div class="container" data-aos="fade-up"
                 data-aos-duration="3000">
@@ -99,7 +99,7 @@
                         <lord-icon
                             src="https://cdn.lordicon.com/wloilxuq.json"
                             trigger="loop"
-                            colors="primary:#e4e4e4,secondary:#fabd21"
+                            colors="primary:#ffffff,secondary:#EBEB00"
                             style="width:75px;height:75px">
                         </lord-icon>
                         <h1 class="title-project">Identidade Visual</h1>
@@ -114,7 +114,7 @@
                         <lord-icon
                             src="https://cdn.lordicon.com/uqpazftn.json"
                             trigger="loop"
-                            colors="primary:#ffffff,secondary:#fabd21"
+                            colors="primary:#ffffff,secondary:#EBEB00"
                             style="width:75px;height:75px">
                         </lord-icon>
                         <h1 class="title-project">Redes Sociais</h1>
@@ -127,7 +127,7 @@
                         <lord-icon
                             src="https://cdn.lordicon.com/vixtkkbk.json"
                             trigger="loop"
-                            colors="primary:#fabd21,secondary:#e4e4e4"
+                            colors="primary:#EBEB00,secondary:#e4e4e4"
                             style="width:75px;height:75px">
                         </lord-icon>
                         <h1 class="title-project">Fotográfia</h1>
@@ -147,57 +147,19 @@
         <!--projetos-->
         <section id="works">
             <h1 class="main-title">Projetos<span>.</span></h1>
-            <!--<div class="btn-links-project arquivo">
-                <div class="btn-animado">
-                    <a href="../sotao/sota.html">Sótão</a>
-                </div>
-            </div>-->
             <div class="containerMax">
                 <div class="project-body" data-aos="fade-up"
                 data-aos-duration="4000">
-                    <!--<div class="head-box">
-                        <lord-icon
-                            src="https://cdn.lordicon.com/xjovhxra.json"
-                            trigger="loop"
-                            colors="primary:#fabd21,secondary:#fabd21"
-                            style="width:75px;height:75px">
-                        </lord-icon>
-                        <p>
-                            Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                        </p>
-                    </div>-->
                     <div class="project-image">
                     </div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
                 data-aos-duration="4000">
-                    <!--<div class="head-box">
-                        <lord-icon
-                            src="https://cdn.lordicon.com/xjovhxra.json"
-                            trigger="loop"
-                            colors="primary:#fabd21,secondary:#fabd21"
-                            style="width:75px;height:75px">
-                        </lord-icon>
-                        <p>
-                            Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                        </p>
-                    </div>-->
                     <div class="project-image">
                     </div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
                 data-aos-duration="4000">
-                    <div class="head-box">
-                        <lord-icon
-                            src="https://cdn.lordicon.com/xjovhxra.json"
-                            trigger="loop"
-                            colors="primary:#fabd21,secondary:#fabd21"
-                            style="width:75px;height:75px">
-                        </lord-icon>
-                        <p>
-                            Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                        </p>
-                    </div>
                     <div class="project-image"></div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
@@ -206,7 +168,7 @@
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
                             trigger="loop"
-                            colors="primary:#fabd21,secondary:#fabd21"
+                            colors="primary:#EBEB00,secondary:#EBEB00"
                             style="width:75px;height:75px">
                         </lord-icon>
                         <p>
@@ -216,12 +178,8 @@
                     <div class="project-image"></div>
                 </div>
             </div>
-            <!--<div class="btn-repositorio">
-                <div class="btn-animado unikB">
-                    <a href="#">Repositório no Github</a>
-                </div>
-            </div>-->
         </section>
+
         <div class="myemail">
             <a href="mailto:samucacreations@gmail.com">samucacreations@gmail.com</a>
         </div>
