--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="rgb(23, 23, 23)">
 
     <link rel="shortcut icon" href="assets/img/favicon-32x32.png" type="image/x-icon">
-    <title>Samuca Creations | Digital Artist</title>
+    <title>Samuca Creations</title>
 
     <!--CSS LINKS-->
     <link rel="stylesheet" href="assets/css/style.css">
