--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@
         <nav>
             <div id="menu-toggle" class="nav-list" data-visible="false">
                 <ol class="nav-ol-list">
-                    <li><a href="#main" aria-hidden="true" id="#main">Sobre</a></li>
-                    <li><a href="#service-area" aria-hidden="true">Serviços</a></li>
-                    <li><a href="#works" aria-hidden="true">Portfólio</a></li>
-                    <li><a href="#contact-area" aria-hidden="true">Contatos</a></li>
+                    <li data-aos="fade-left"
+                    data-aos-duration="1000"><a href="#main" aria-hidden="true" id="#main">Sobre</a></li>
+                    <li data-aos="fade-left"
+                    data-aos-duration="2000"><a href="#service-area" aria-hidden="true">Serviços</a></li>
+                    <li data-aos="fade-left"
+                    data-aos-duration="3000"><a href="#works" aria-hidden="true">Trabalhos</a></li>
+                    <li data-aos="fade-left"
+                    data-aos-duration="4000"><a href="#client-side" aria-hidden="true">Clientes</a></li>
+                    <li data-aos="fade-left"
+                    data-aos-duration="5000"><a href="#contact-area" aria-hidden="true">Orçamento</a></li>
                 </ol>
                 <ul class="nav-list-social">
                     <li>
@@ -60,24 +66,25 @@
         <section id="main">
             <div class="containerMax">
                 <div class="container" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="2000">
                     <p class="text-blur-out">Oi, meu nome é</p>
                     <h2 class="big-heading">Samuca  Creations<span>.</span></h2>
                     <p>
                         Sou um Designer Gráfico especializado em dar vida às ideais virtuais consequentemente físicos e projetando melhores experiências aos clientes.
                     </p>
                     <br>
-                    <div class="btn-animado">
+                    <div class="btn-animado" data-aos="fade-up"
+                    data-aos-duration="3000">
                         <a href="https://www.instagram.com/samucacreations/" target="_blank">Instagram</a>
                     </div>
                 </div>
                 <!--Svg-->
                 <div class="container" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="4000">
                     <img class="meAvatar" src="assets/img/samuca.png" alt="Samuel Nicolau">
                 </div>
                 <div class="container" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="5000">
                     <h2 class="sub-heading">Designer Gráfico<span>.</span></h2>
                     <div class="main-coluna">
                         <div class="coluna content-about">
@@ -91,10 +98,11 @@
         </section>
         <!--Serviços-->
         <section id="service-area">
-            <h1 class="main-title">Artista Digital<span>.</span></h1>
+            <h1 class="main-title" data-aos="fade-up"
+            data-aos-duration="1000">Artista Digital<span>.</span></h1>
             <div class="containerMax">
                 <div class="box-service" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="2000">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/wloilxuq.json"
@@ -102,10 +110,10 @@
                             colors="primary:#ffffff,secondary:#EBEB00"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">Identidade Visual</h1>
+                        <h1 class="title-project">BRAND DESIGN</h1>
                     </div>
                     <p>
-                        Criação de identidade visual de forma que ela seja clara, objetiva e principalmente intuitiva para o mercado.
+                        Criação de Brand Design de forma que ela seja clara, objetiva e principalmente intuitiva para o mercado.
                     </p>
                 </div>
                 <div class="box-service" data-aos="fade-up"
@@ -117,12 +125,12 @@
                             colors="primary:#ffffff,secondary:#EBEB00"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">Redes Sociais</h1>
+                        <h1 class="title-project">GERENCIAMENTO DE MÍDIA SOCIAL</h1>
                     </div>
                     <p>Uma gestão envolvente, planejado e com conteúdo estrategicamente personalizado para o seu público alvo.</p>
                 </div>
                 <div class="box-service" data-aos="fade-up"
-                data-aos-duration="3000">
+                data-aos-duration="4000">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/vixtkkbk.json"
@@ -130,7 +138,7 @@
                             colors="primary:#EBEB00,secondary:#e4e4e4"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">Fotográfia</h1>
+                        <h1 class="title-project">FOTOGRÁFIA</h1>
                     </div>
                     <P>A fotográfia é um gatilho nostálgico, eternize os melhores momentos da sua vida. Qualidade que sobra pra guardar no bolso.</P>
                 </div>
@@ -138,7 +146,8 @@
         </section>
         <!--Conhecimentos-->
         <section id="skills-area">
-            <h1 class="main-title">Conhecimentos<span>.</span></h1>
+            <h1 class="main-title" data-aos="fade-up"
+            data-aos-duration="3000">Conhecimentos<span>.</span></h1>
             <div class="wrapper">
                 <span class="auto-type"></span>
             </div>
@@ -146,20 +155,21 @@
         
         <!--projetos-->
         <section id="works">
-            <h1 class="main-title">Projetos<span>.</span></h1>
+            <h1 class="main-title" data-aos="fade-up"
+            data-aos-duration="1000">Trabalhos<span>.</span></h1>
             <div class="containerMax">
                 <div class="project-body" data-aos="fade-up"
-                data-aos-duration="4000">
+                data-aos-duration="1000">
                     <div class="project-image">
                     </div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
-                data-aos-duration="4000">
+                data-aos-duration="2000">
                     <div class="project-image">
                     </div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
-                data-aos-duration="4000">
+                data-aos-duration="3000">
                     <div class="project-image"></div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
@@ -179,25 +189,82 @@
                 </div>
             </div>
         </section>
-
+        <!--Client side-->
+        <section id="client-side">
+            <h1 class="main-title" data-aos="fade-up"
+            data-aos-duration="1000">Clientes<span>.</span></h1>
+            <div class="containerMax">
+                <div class="boxClientSide"  data-aos="fade-up" data-aos-duration="1000">
+                    <img src="vendor/client/pandula.png" alt="pandula" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+                <div class="boxClientSide" data-aos="fade-up" data-aos-duration="2000">
+                    <img src="vendor/client/iat.png" alt="IAT SD" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+                <div class="boxClientSide"  data-aos="fade-up" data-aos-duration="3000"">
+                    <img src="vendor/client/la.png" alt="la" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+                <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="4000">
+                    <img src="vendor/client/alafrio.png" alt="alafrio" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+                <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="5000">
+                    <img src="vendor/client/essence.png" alt="essence" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+                <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="6000">
+                    <img src="vendor/client/yoyo.png" alt="yoyo" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+                <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="7000">
+                    <img src="vendor/client/nerio.png" alt="nerio farinha" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+                <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="8000">
+                    <img src="vendor/client/doce.png" alt="doce aromas" class="logoClient">
+                    <div class="overlay">
+                      <span class="text"> @samucacreations </span>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div class="myemail">
             <a href="mailto:samucacreations@gmail.com">samucacreations@gmail.com</a>
         </div>
         <footer>
             <!--contato-->
-            <div id="contact-area">
+            <div id="contact-area" data-aos="fade-left"
+            data-aos-duration="1000">
                 <div class="col-12">
-                    <h1 class="main-title">
-                        Entrar em contato<span>.</span>
+                    <h1 class="main-title" data-aos="fade-left"
+            data-aos-duration="3000">
+                        Solicitar Orçamento<span>.</span>
                     </h1>
                 </div>
                 <P>
-                    Minha caixa de entrada está sempre aberta. Se você tem uma pergunta ou querendo conversar, estarei do outro lado respondendo suas mensagens!
+                    Minha caixa de entrada está sempre aberta. Se você tem uma ideia ou querendo desenvolver uma, estarei do outro lado respondendo suas mensagens!
                 </P>
-                <div class="btn-links-project arquivo">
+                <div class="btn-links-project arquivo" data-aos="fade-left"
+                data-aos-duration="1000">
                     <div class="btn-malito">
-                        <a href="mailto:samucacreations@gmail.com">
-                            Diga Olá!
+                        <a href="https://wa.me/+244933005827" target="_blank">
+                            Orçamento
                         </a>
                     </div>
                 </div>
