--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             data-aos-duration="1000">Trabalhos<span>.</span></h1>
             <div class="containerMax">
                 <div class="project-body" data-aos="fade-up"
-                data-aos-duration="1000">
+                data-aos-duration="1090">
                     <div class="project-image">
                     </div>
                 </div>
@@ -169,12 +169,44 @@
                     </div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
+                data-aos-duration="2090">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
                 data-aos-duration="3000">
                     <div class="project-image"></div>
                 </div>
                 <div class="project-body" data-aos="fade-up"
+                data-aos-duration="3090">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
                 data-aos-duration="4000">
-                    <div class="head-box">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
+                data-aos-duration="4090">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
+                data-aos-duration="5090">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
+                data-aos-duration="6000">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
+                data-aos-duration="6090">
+                    <div class="project-image"></div>
+                </div>
+                <div class="project-body" data-aos="fade-up"
+                data-aos-duration="7000">
+                    <!--<div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
                             trigger="loop"
@@ -184,7 +216,7 @@
                         <p>
                             Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
                         </p>
-                    </div>
+                    </div>-->
                     <div class="project-image"></div>
                 </div>
             </div>
