--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <li data-aos="fade-left"
                     data-aos-duration="2000"><a href="#service-area" aria-hidden="true">Serviços</a></li>
                     <li data-aos="fade-left"
-                    data-aos-duration="3000"><a href="#works" aria-hidden="true">Trabalhos</a></li>
+                    data-aos-duration="3000"><a href="#works" aria-hidden="true">Social Media</a></li>
                     <li data-aos="fade-left"
-                    data-aos-duration="4000"><a href="#client-side" aria-hidden="true">Clientes</a></li>
+                    data-aos-duration="4000"><a href="#client-side" aria-hidden="true">Logofolio</a></li>
                     <li data-aos="fade-left"
                     data-aos-duration="5000"><a href="#contact-area" aria-hidden="true">Orçamento</a></li>
                 </ol>
@@ -156,7 +156,7 @@
         <!--projetos-->
         <section id="works">
             <h1 class="main-title" data-aos="fade-up"
-            data-aos-duration="1000">Trabalhos<span>.</span></h1>
+            data-aos-duration="1000">Social Media<span>.</span></h1>
             <div class="containerMax">
                 <div class="project-body" data-aos="fade-up"
                 data-aos-duration="1090">
@@ -192,86 +192,65 @@
                 data-aos-duration="5000">
                     <div class="project-image"></div>
                 </div>
-                <div class="project-body" data-aos="fade-up"
-                data-aos-duration="5090">
-                    <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
-                data-aos-duration="6000">
-                    <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
-                data-aos-duration="6090">
-                    <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
-                data-aos-duration="7000">
-                    <!--<div class="head-box">
-                        <lord-icon
-                            src="https://cdn.lordicon.com/xjovhxra.json"
-                            trigger="loop"
-                            colors="primary:#EBEB00,secondary:#EBEB00"
-                            style="width:75px;height:75px">
-                        </lord-icon>
-                        <p>
-                            Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                        </p>
-                    </div>-->
-                    <div class="project-image"></div>
-                </div>
             </div>
         </section>
         <!--Client side-->
         <section id="client-side">
             <h1 class="main-title" data-aos="fade-up"
-            data-aos-duration="1000">Clientes<span>.</span></h1>
+            data-aos-duration="1000"><i>Logo<b>folio</b></i><span>.</span></h1>
             <div class="containerMax">
                 <div class="boxClientSide"  data-aos="fade-up" data-aos-duration="1000">
                     <img src="vendor/client/pandula.png" alt="pandula" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">Pandula Eletrônico</span>
                     </div>
                 </div>
                 <div class="boxClientSide" data-aos="fade-up" data-aos-duration="2000">
                     <img src="vendor/client/iat.png" alt="IAT SD" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">IAT SD</span>
                     </div>
                 </div>
                 <div class="boxClientSide"  data-aos="fade-up" data-aos-duration="3000"">
                     <img src="vendor/client/la.png" alt="la" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">Lídia Abrantes</span>
                     </div>
                 </div>
                 <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="4000">
                     <img src="vendor/client/alafrio.png" alt="alafrio" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">ALAFRIO</span>
                     </div>
                 </div>
                 <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="5000">
                     <img src="vendor/client/essence.png" alt="essence" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">Essence Spa</span>
                     </div>
                 </div>
                 <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="6000">
                     <img src="vendor/client/yoyo.png" alt="yoyo" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">YOYO!</span>
                     </div>
                 </div>
                 <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="7000">
                     <img src="vendor/client/nerio.png" alt="nerio farinha" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">Nério Farinha</span>
                     </div>
                 </div>
                 <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="8000">
                     <img src="vendor/client/doce.png" alt="doce aromas" class="logoClient">
                     <div class="overlay">
-                      <span class="text"> @samucacreations </span>
+                      <span class="text">Doce aromas</span>
+                    </div>
+                </div>
+                <div class="boxClientSide one-div"  data-aos="fade-up" data-aos-duration="8000">
+                    <img src="vendor/client/buba.png" alt="doce aromas" class="logoClient">
+                    <div class="overlay">
+                      <span class="text">Buba Digital</span>
                     </div>
                 </div>
             </div>
